--- a/package.json
+++ b/package.json
@@ -19,14 +19,19 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "electron": "^10.4.7",
+    "electron-redux": "^1.5.4",
     "log4js": "^6.3.0",
     "node-notifier": "^10.0.0",
     "node-sass": "^6.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-h5-audio-player": "^3.7.1",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
     "xml-js": "^1.6.11"
